# ClassicalStatPhys

./: .gitignore  LICENSE  README.md
basic-examples/: CMakeLists.txt
basic-examples/ensemble/: CMakeLists.txt  normalmode_ensemble.cpp
basic-examples/integrator/: 1spin_main.hpp  1spin_rk4.cpp  1spin_velver.cpp  CMakeLists.txt
basic-examples/lattice/: CMakeLists.txt  lattice.cpp
basic-examples/metadynamics/: CMakeLists.txt  wanglandau.cpp
basic-examples/parallel/: CMakeLists.txt  hello_hybrid.cpp  hello_mpi.cpp  hello_omp.cpp
basic-examples/physics/: CMakeLists.txt  exactcalc.cpp  fpu.cpp  harmonic_oscillator.cpp  todalattice.cpp  valence_force_field_model_fixed_end.cpp
basic-examples/rootfinder/: CMakeLists.txt  optimization.cpp
basic-examples/tools/: CMakeLists.txt  data_recorder.cpp  histogram.cpp
clstatphys/: CMakeLists.txt  README.md
clstatphys/clstatphys/: CMakeLists.txt
clstatphys/clstatphys/ensemble/: CMakeLists.txt  action_metropolis.hpp  harmonic_chain_open_boundary.hpp  harmonic_chain_periodic_boundary.hpp  hybrid_monte_carlo.hpp  langevin_thermal_bath.hpp  langevin_thermostat.hpp  metropolis_classical_heisenberg.hpp  metropolis_classical_xy.hpp  modeoccupancy_ensemble_periodic_boundary.hpp  modeoccupancy_ensemble_periodic_boundary_fftw.hpp  normalmode_ensemble.hpp  normalmode_ensemble_fftw.hpp  normalmode_ensemble_periodic_boundary.hpp  normalmode_ensemble_periodic_boundary_fftw.hpp  point_heating.hpp  steady_cauchy.hpp  water_bag.hpp  water_bag_parallel.hpp  wolf_classical_xy.hpp
clstatphys/clstatphys/frames/: CMakeLists.txt  basic_flow.hpp  basic_flow_mpi.hpp  quasi_integrable_thermalization.hpp  quasi_integrable_thermalization_update.hpp
clstatphys/clstatphys/integrator/: CMakeLists.txt  cauchy_euler.hpp  cauchy_runge_kutta.hpp  dissipated_euler.hpp  dissipated_runge_kutta.hpp  euler.hpp  position_velret.hpp  runge_kutta_2nd.hpp  runge_kutta_3rd.hpp  runge_kutta_4th.hpp  stochastic_integrator.hpp  velocity_velret.hpp  velocity_velret_parallel.hpp  yoshida_4th.hpp  yoshida_4th_parallel.hpp
clstatphys/clstatphys/lattice/: CMakeLists.txt  bethelattice.hpp  bethelattice_connected_taggedparticle.hpp  chain.hpp  chain_connected_taggedparticle.hpp  chain_open_boundary.hpp  chain_openboundary.hpp  fullyconnected.hpp  graphene_square_open_boundary.hpp  regularcube.hpp  regularcube_connected_taggedparticle.hpp  squarelattice.hpp  squarelattice_connected_taggedparticle.hpp  tesseract.hpp
clstatphys/clstatphys/metadynamics/: wanglandau.hpp  wanglandau_2d.hpp  wanglandau_parallelized.hpp
clstatphys/clstatphys/physics/: classical_heisenberg.hpp  classical_xy.hpp  classical_xy_external.hpp  classical_xy_external_fullyconnected.hpp  classical_xy_fullyconnected.hpp  classical_xy_fullyconnected_parallel.hpp  classical_xy_impurity.hpp  fixed_boundary_normalmode.hpp  fixed_boundary_normalmode_fftw.hpp  fpu.hpp  fpu_fixed_end.hpp  fpu_fixed_end_parallel.hpp  fpu_generalized.hpp  fpu_generalized_fixed_end.hpp  fpu_generalized_fixed_end_parallel.hpp  freeparticle.hpp  harmonic_oscillator.hpp  harmonic_oscillator_fixed_end.hpp  harmonic_oscillator_impurity.hpp  normalmode_energy.hpp  normalmode_energy_fftw.hpp  normalmode_energy_parallel.hpp  normalmode_energy_periodic.hpp  normalmode_energy_periodic_fftw.hpp  partition_function_classical_xy_chain.hpp  partition_function_classical_xy_fullyconnected.hpp  partition_function_harmonic_chain.hpp  periodic_boundary_normalmode.hpp  periodic_boundary_normalmode_fftw.hpp  sinh_lattice_fixed_end.hpp  sinh_lattice_fixed_end_parallel.hpp  toda_action_variables.hpp  toda_action_variables_gk.hpp  toda_conservation_fields.hpp  toda_discriminant.hpp  toda_lax_form.hpp  todalattice.hpp  todalattice_fixed_end.hpp  todalattice_fixed_end_parallel.hpp  valence_force_field_model_fixed_end.hpp  (+1 more)
clstatphys/clstatphys/rootfinder/: bisection_method.hpp  false_position_method.hpp  (+1 more)
clstatphys/config/: FindFFTW.cmake  core.cmake  third_party.cmake
clstatphys/tests/: CMakeLists.txt
fully-connected-XY/src/: CMakeLists.txt  clSpindemo.cpp  clXYmodelCalcDistance.cpp  clXYmodelCriticalMD_Cube.cpp  clXYmodelCriticalMD_Fully.cpp  clXYmodelCriticalMD_Square.cpp  clXYmodelCriticalMD_Tesseract.cpp  clXYmodelCritical_Cube.cpp  clXYmodelCritical_Fully.cpp  clXYmodelCritical_Square.cpp  clXYmodelCritical_Tesseract.cpp  clXYmodelNonEq_Cube.cpp  clXYmodelNonEq_Fully.cpp  clXYmodelNonEq_Square.cpp  clXYmodelNonEq_Tesseract.cpp  clXYmodelNonEqwithBath_Cube.cpp  clXYmodelNonEqwithBath_Fully.cpp  clXYmodelNonEqwithBath_Square.cpp  clXYmodelNonEqwithBath_Tesseract.cpp  clXYmodelWangLandau_Fully.cpp  clXYmodel_Cube.cpp  clXYmodel_Fully.cpp  clXYmodel_FullyParallelized.cpp  clXYmodel_Square.cpp  clXYmodel_Tesseract.cpp  clXYmodeldemoNonEq.cpp
harmonic-oscillator-gge/: CMakeLists.txt
harmonic-oscillator-gge/src/: CMakeLists.txt  harmonic_oscillator_periodic_boundary_thermalization_equilibrium.cpp  harmonic_oscillator_periodic_boundary_thermalization_from_point_heating.cpp  harmonic_oscillator_periodic_boundary_thermalization_from_two_part_heating.cpp
harmonic-oscillator-gge/tests/: finalize.cpp  physical_quantities.cpp  sampling_process.cpp  settings.cpp  settings_common.cpp  two_part_heating.cpp
practical-trials/: CMakeLists.txt
toda-lattice-action-angle-sampling/: CMakeLists.txt
toda-lattice-action-angle-sampling/config/: add_iotest.cmake
toda-lattice-action-angle-sampling/include/: CMakeLists.txt
toda-lattice-action-angle-sampling/src/: CMakeLists.txt  toda_lattice_periodic_boundary_action_metropolis.cpp  toda_lattice_periodic_boundary_hybrid_monte_carlo.cpp  toda_lattice_periodic_boundary_thermalization_from_normalmode_ensemble.cpp
toda-lattice-action-angle-sampling/tests/: CMakeLists.txt  finalize.cpp  physical_quantities.cpp  sampling_process.cpp  settings.cpp  settings_common.cpp
toda-lattice-gge/src/: CMakeLists.txt  gfpu_pereriodic_boundary_thermalization_from_normalmode_ensemble.cpp  toda_lattice_periodic_boundary_thermalization_from_equilibrium.cpp  toda_lattice_periodic_boundary_thermalization_from_normalmode_ensemble.cpp
(+231 files in other folders)
