FILE(GLOB PROGS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
foreach(progs ${PROGS})
  string(REGEX REPLACE ".cpp" "" name ${progs}) 
  set(target_name test_${name})
  add_executable(${target_name} ${name})
  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
  target_link_libraries(${target_name} gtest_main)
  target_link_libraries(${target_name} ${FFTW_LIBRARIES} ${ROKKO_LIBRARIES})
  add_test(${target_name} ${name})
endforeach(progs)

